deployment/client/ollama-client-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ollama-client
  labels:
    app.kubernetes.io/part-of: OLLAMA_AI_APPLICATION
    app.openshift.io/runtime: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-client
  template:
    metadata:
      labels:
        app: ollama-client
    spec:
      containers:
        - name: container
          image: quay.io/mmartofe/ollama-vaadin-gui
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '0.3'
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
